Fixed mobile display too long hiding tools

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
 .container-mobile {
     display: grid;
     grid-template-columns: repeat(auto-fit, 10px);
-    grid-template-rows: repeat(10px, 10px);
+    grid-template-rows: repeat(50, 10px);
     grid-auto-rows: 10px;
     width: 370px;
     height: 600px;
